--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <article class="main__section-item">
           <h2 class="main__section-title">Фритрек и нулевой спринт: Подготовка к работе</h2>
           <div class="main__section-image">
-            <img  src="./images/car.png" alt="">
+            <img class="main-image" src="./images/car.png" alt="">
             <p class="main__section-image-text">&lt/HTML&gt</p>
           </div>
           <div class="main__section-text-block">
@@ -83,7 +83,7 @@
         <article class="main__section-item">
           <h2 class="main__section-title">1 спринт: Я — чистый лист</h2>
           <div class="main__section-image">
-            <img class="image-blackandwight" src="./images/car.png" alt="">
+            <img class="main-image image-blackandwight" src="./images/car.png" alt="">
             <p class="main__section-image-text">&lt/HTML&gt</p>
           </div>
           <div class="main__section-text-block">
@@ -117,7 +117,7 @@
           <h2 class="main__section-title">1 спринт: А если не получится?</h2>
           <div class="main__section-image">
             <img class="image-saturate" src="./images/car.png" alt="">
-            <p class="main__section-image-text">&lt/CSS&gt</p>
+            <p class="main__section-image-text">&ltCSS&gt</p>
           </div>
           <div class="main__section-text-block">
             <p class="main__section-text">
