--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
   </head>
   <body class="page">
     <header class="header">
+
       <div class="header__section">
         <a><h1 class="header__title"> &lt/HTML&gt </h1></a> 
-        <p class="header__text">закрывающий тег</p>
+        <p class="header__text">
+          закрывающий тег
+        </p>
       </div>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -76,7 +79,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--like-sparks-color)"/>
               </svg> 
             </button>
-            <button class="button main__section-button card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
+            <button class="button main__section-button button-animation-like-and-memory card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
           </div>
         </article>
 
@@ -109,7 +112,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--like-sparks-color)"/>
               </svg> 
             </button>
-            <button class="button main__section-button card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
+            <button class="button main__section-button button-animation-like-and-memory card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
           </div>
         </article>
 
@@ -140,7 +143,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--like-sparks-color)"/>
               </svg> 
             </button>
-            <button class="button main__section-button card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
+            <button class="button main__section-button button-animation-like-and-memory card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
           </div>
         </article>
 
@@ -172,7 +175,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--like-sparks-color)"/>
               </svg> 
             </button>
-            <button class="button main__section-button card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
+            <button class="button main__section-button button-animation-like-and-memory card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
           </div>
         </article>
 
@@ -205,7 +208,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--like-sparks-color)"/>
               </svg> 
             </button>
-            <button class="button main__section-button card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
+            <button class="button main__section-button button-animation-like-and-memory card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
           </div>
         </article>
 
@@ -235,7 +238,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--like-sparks-color)"/>
               </svg> 
             </button>
-            <button class="button main__section-button card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
+            <button class="button main__section-button button-animation-like-and-memory card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
           </div>
         </article>
 
@@ -267,7 +270,7 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--like-sparks-color)"/>
               </svg> 
             </button>
-            <button class="button main__section-button card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
+            <button class="button main__section-button button-animation-like-and-memory card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
           </div>
         </article>
 
@@ -301,12 +304,12 @@
                 <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--like-sparks-color)"/>
               </svg> 
             </button>
-            <button class="button main__section-button card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
+            <button class="button main__section-button button-animation-like-and-memory card__like-button" type="button"><span class="text-color-style card__like-button-text button__text">Like</span></button>
           </div>
         </article>
       </section>
       <section class="main-footer">
-        <button class="button main-footer__button-block" type="button" onclick="window['dialog-id'].showModal();" aria-controls="dialog-id">
+        <button class="button main-footer__button-block button-animation-like-and-memory" type="button" onclick="window['dialog-id'].showModal();" aria-controls="dialog-id">
           <div class="main-footer__section">
             <div class="main-footer__section-floppy">
               <svg viewBox="0 0 39 39" class="floppy-text-style floppy" preserveAspectRatio="none">
