Я надеюсь все отлично

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
 
       <div class="header__section">
-        <a><p class="header__title"> &lt;&frasl;HTML&gt; </p></a> 
+        <a class="header__title"> &lt;&frasl;HTML&gt; </a> 
         <h1 class="header__text">
           закрывающий тег
         </h1>
